; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_44807.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_44807.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"Shellcode Length:  %d\0A\00", align 1
@code = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"Egghunter Length:  %d\0A\00", align 1
@egg_hunter = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32 (...)*, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %6 = load i64, i64* @code, align 8
  %7 = call i32 @strlen(i64 %6)
  %8 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load i64, i64* @egg_hunter, align 8
  %10 = call i32 @strlen(i64 %9)
  %11 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  %12 = load i64, i64* @egg_hunter, align 8
  %13 = inttoptr i64 %12 to i32 (...)*
  store i32 (...)* %13, i32 (...)** %5, align 8
  %14 = load i32 (...)*, i32 (...)** %5, align 8
  %15 = call i32 (...) %14()
  ret i32 0
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @strlen(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
